# simple-file-tagger

./: .gitignore  Cargo.toml  default.nix  flake.nix  shell.nix
migrations/2024-05-10-190200_create/: up.sql
migrations/2024-05-10-190909_create_tags/: up.sql
migrations/2024-05-10-191214_create_tag_records/: down.sql  up.sql
proto/: helloworld.proto
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs
