[package]
name = "file-tagger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/test.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
httpbis = "0.9.1"
notify = "6.1.1"
protobuf = "3.3.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
