[package]
name = "file-tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
httpbis = "0.9.1"
notify = "6.1.1"
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12"
tonic = "0.11.0"
diesel = { version = "2.1.6", features = ["sqlite"] }

[build-dependencies]
tonic-build = "0.11"

